fix(Main.css): align nav elements vertically #14

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -52,6 +52,7 @@
   width: 100%;
   list-style: none;
   display: flex;
+  align-items: center;
 }
 .nav-left-container {
   justify-content: space-between;
